@@ -1,11 +1,10 @@
 plugins {
   id 'application'
   id 'checkstyle'
-  id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+  id 'io.spring.dependency-management' version '1.0.13.RELEASE'
   id 'org.springframework.boot' version '2.5.14'
-  id 'org.owasp.dependencycheck' version '7.1.1'
+  id 'org.owasp.dependencycheck' version '7.3.2'
   id 'com.github.ben-manes.versions' version '0.42.0'
   id 'org.sonarqube' version '3.3'
 }
@@ -70,6 +69,12 @@ test {
   failFast = true
 }
 
+task highLevelDataSetup(type: JavaExec) {
+  main = "uk.gov.hmcts.reform.civil.HighLevelDataSetupApp"
+  classpath += sourceSets.main.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'install'
 }
@@ -84,15 +89,24 @@ task lintUserInterfaceTests(type: Exec, description: 'Runs linting of E2E tests.
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
   commandLine './bin/wait-for.sh', System.env.URL == null ?  'empty' : System.env.URL
-  commandLine './bin/wait-for.sh', System.env.CIVIL_GENERAL_APPLICATIONS_URL == null ?  'empty' : System.env.CIVIL_GENERAL_APPLICATIONS_URL
 }
 
 task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:smoke'
 }
 
-task runFunctionalTests(type: Exec, description: 'Runs functional tests.') {
+task runFunctionalTests(type: Exec, description: 'Runs 1v1 e2e and api tests.') {
+  onlyIf {
+    return System.env.PR_BUILD == 'true'
+  }
   commandLine '/usr/bin/yarn', '--silent', 'test:functional'
+}
+
+task runNightlyFunctionalTests(type: Exec, description: 'Runs full (1v1 and multiparty) functional tests.') {
+  onlyIf {
+    return System.env.NIGHTLY_BUILD == 'true'
+  }
+  commandLine '/usr/bin/yarn', '--silent', 'test:fullfunctional'
 }
 
 task smoke(description: 'Runs the smoke tests.') {
@@ -100,7 +114,7 @@ task smoke(description: 'Runs the smoke tests.') {
 }
 
 task functional(description: 'Runs the functional tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runFunctionalTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runFunctionalTests, runNightlyFunctionalTests))
 }
 
 def inStrictOrder(Task... tasks) {
@@ -124,15 +138,6 @@ checkstyle {
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
-pmd {
-  toolVersion = "6.39.0"
-  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
-  reportsDir = file("$project.buildDir/reports/pmd")
-  // https://github.com/pmd/pmd/issues/876
-  ruleSets = []
-  ruleSetFiles = files("config/pmd/ruleset.xml")
-}
-
 jacocoTestReport {
   executionData(test, integration)
   executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
@@ -150,13 +155,14 @@ jacocoTestReport.dependsOn {
   subprojects*.test
 }
 
-project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
+project.tasks['sonarqube'].dependsOn test, integration
 
 sonarqube {
   properties {
     property "sonar.projectName", "Reform :: civil-general-apps-ccd-definition"
     property "sonar.projectKey", "civil-general-apps-ccd-definition"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
+    property "sonar.coverage.exclusions", "**/HighLevelDataSetupApp.java"
   }
 }
 
@@ -201,13 +207,18 @@ dependencies {
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
 
-  implementation group: 'io.springfox', name: 'springfox-swagger2', version: '3.0.0'
-
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: reformLoggingVersion
   implementation group: 'com.github.hmcts.java-logging', name: 'logging-appinsights', version: reformLoggingVersion
 
   implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
   implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.2'
+
+  implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.7.5'
+  constraints {
+    implementation('org.apache.commons:commons-compress:1.21') {
+      because 'CVE-2021-35515, CVE-2021-35516, CVE-2021-35517, CVE-2021-36090'
+    }
+  }
 
   testImplementation(platform('org.junit:junit-bom:5.8.2'))
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
